kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beesens-deployment
  labels:
    app: beesens
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beesens
  template:
    metadata:
      labels:
        app: beesens
    spec:
      containers:
        - name: beesens
          image: mohamedbedier/beesens:1.1.2
          ports:
            - containerPort: 3000 # Replace with your app's port
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 60 
            periodSeconds: 10
