kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: beesens-service
spec:
  selector:
    app: beesens
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000 # Replace with your app's port
  type: ClusterIP
