kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beesens-ingress
spec:
  rules:
  - host: bee.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beesens-service
            port:
              number: 3000
